# hk100planner

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy.yml
hollow-knight-save-parser/: Cargo.toml
hollow-knight-save-parser/src/: lib.rs  main.rs
src/: .prettierrc  App.tsx  Settings.tsx  checklist_store.ts  constants.ts  index.css  main.tsx  styles.ts
src/assets/: check.tsx  checkmark.tsx  exclamationmark.tsx  index.ts  questionmark.tsx
src/components/: Button.tsx  DialogBox.tsx  FText.tsx  SaveUploader.tsx  Section.tsx  SideBar.tsx  Tooltip.tsx
src/components/Button/: Button.tsx
src/components/Checkbox/: CheckBox.tsx  SectionCheckBox.tsx  index.ts  index.tsx
src/components/DialogBox/: DialogBox.tsx
src/components/FText/: FText.tsx
src/components/SaveUploader/: SaveUploader.tsx  index.ts
src/components/Section/: Section.tsx  index.ts
src/components/SideBar/: SideBar.tsx  index.ts
src/hooks/: useBreakpoint.ts  useCurrentChecklistStore.ts  useFavicon.ts  useParallaxBackground.ts  useSaveParser.ts  useUndoRedoKeybinds.ts
src/stores/: INITIAL_CHECKLIST_STATE.ts  INITIAL_HOLLOW_KNIGHT_CHECKLIST_STATE.ts  INITIAL_SILKSONG_CHECKLIST_STATE.ts  checklistStore.ts  uiStore.ts
src/types/: checklist.ts  util.ts
src/util/: formatCheckListError.ts  isHollowKnight.ts  partialDeepEqual.ts  renderLink.ts  sleep.ts  typedObject.ts
(+1 files in other folders)
