[package]
edition = "2024"
name = "hollow-knight-save-parser"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "hksave"
path = "src/main.rs"

[dependencies]
aes = "0.8.4"
base64 = "0.22.1"
ecb = { version = "0.1.2", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.143"
wasm-bindgen = "0.2"
